--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "sandeep kumar",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "stripe": "^12.10.0"
   }
 }
