--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
   "author": "sandeep kumar",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "stripe": "^12.10.0"
+    "socket.io": "^4.7.2",
+    "speakeasy": "^2.0.0",
+    "stripe": "^12.18.0",
+    "twilio": "^4.18.0",
+    "uuid": "^9.0.0"
   }
 }
