modify json file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "S.K Ecommerce",
   "version": "1.0.0",
   "description": "S.K Ecommerce is shopping web",
-  "main": "index.js",
+  "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"node server.js"
