--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js"
+    "start":"cd ./src && node server.js"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   },
   "author": "sandeep kumar",
   "license": "ISC",
