--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"cd ./src && node server.js"
+    "start":"node ./src/server.js"
   },
   "engines": {
     "node": ">=14.20.1"
