--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node ./src/server.js"
+    "start": "node ./src/server.js"
   },
   "engines": {
     "node": ">=14.20.1"
@@ -17,12 +17,15 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.2",
     "speakeasy": "^2.0.0",
     "stripe": "^12.18.0",
